logo and layout

--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@ title: VaudBioTech
 	<div class="sitewidth">
 	
 	<div class="tagline1">
-		<h1 class="tagline-h1">Educate 4 Life</h1>
+		<h1 class="tagline-h1">Precision treatment</h1>
 	</div>
 
 	<div class="tagline2">
 		<h2 class="tagline-h2">Discovery starts here</h2>
 	</div>
 
-	 <!-- <div class="tagline3"> -->
+	 <!-- <div class="tagline2"> -->
+		<!-- <h2 class="tagline-h2"> -->
 	 <!-- 	<div class="glitch"  id="glitch"> -->
 	 <!-- 		<div class="text"></div> -->
 	 <!-- 	</div> -->
+		<!-- </h2> -->
 	 <!-- </div> -->
 </div>
 </div>
@@ -37,21 +39,21 @@ title: VaudBioTech
 <div class="button-flex-container">
 
 	<div>	<a href="https://github.com/DylanLawless/drug_dev_reg">
-				<button class="buttonblack">Open source<br/>development</button> 
+				<button class="buttonblack">Open source<br/>development</button>
 			</a> 
 	</div> 
 
-	<div>	<a href="https://lawlessgenomics.com/topic/evidence_finder_gene_all.html">
+	<div>	<a href="https://www.epfl.ch/schools/sv/school-of-life-sciences/innovation/catalyze4life/educate4life/">
 				<button class="buttonblack">Technology<br/>overview</button> 
 			</a> 
 	</div> 
 
-	<div>	<a href="https://lawlessgenomics.com/topic/evidence-finder-variant">
+	<div>	<a href="https://www.epfl.ch/schools/sv/school-of-life-sciences/innovation/catalyze4life/educate4life/">
 				<button class="buttonblack">Meet the<br/>team</button> 
 			</a> 
 	</div> 
 
-	<div>	<a href="https://lawlessgenomics.com/topic/iuis-iei-table-page">
+	<div>	<a href="https://www.epfl.ch/schools/sv/school-of-life-sciences/innovation/catalyze4life/educate4life/">
 				<button class="buttonblack">Clinical<br/>trials</button> 
 			</a> 
 	</div> 
@@ -70,6 +72,20 @@ On the frontier of human health
 in continuous development.
 <!-- </div> -->
 
+
+
+
+<div class="row">
+	<div class="column">
+	    <img src="/images/pdb/6oge/6oge_cartoon.jpg" alt="Snow" style="width:100%">
+	</div>
+	<div class="column">
+	    <img src="/images/pdb/6oge/6oge_surf.jpg" alt="Forest" style="width:100%">
+	</div>
+</div>
+
+Cryo-EM structure of Her2 (cyan) extracellular domain-Trastuzumab (Herceptin - red and pink) Fab-Pertuzumab (Perjeta - yellow and orange) Fab complex. Derived from PDB 6OGE
+<a href="https://doi.org/10.1371/journal.pone.0216095">https://doi.org/10.1371/journal.pone.0216095</a>.
 <!-- </div> -->
 <!-- </div> -->
 
@@ -148,5 +164,5 @@ in continuous development.
 
 <br>
 <div class="button-flex-container">
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/h69Nb8aD3no" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/dxnjAc-rqz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
